--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -8,19 +8,17 @@
   }
 
   //custom scrollbar
-  &::-webkit-scrollbar-track
-  {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: var(--gray-100);
   }
   &::-webkit-scrollbar {
     width: 0.7rem;
     background-color: var(--gray-100);
   }
-  &::-webkit-scrollbar-thumb
-  {
+  &::-webkit-scrollbar-thumb {
     border-radius: 0.7rem;
-    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: var(--gray-200);
   }
 }
@@ -129,7 +127,8 @@
   table {
     width: 100%;
 
-    th, td {
+    th,
+    td {
       padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--gray-100);
     }
@@ -162,7 +161,7 @@
         }
       }
 
-      button {        
+      button {
         width: 2rem;
         height: 2rem;
         background: var(--gray-100);
@@ -183,5 +182,3 @@
     }
   }
 }
-
-
