--- a/src/styles/player.module.scss
+++ b/src/styles/player.module.scss
@@ -23,7 +23,7 @@
   footer {
     align-self: stretch;
 
-    &.empty {
+    &.empty .progress {
       opacity: 0.5;
     }
   }
@@ -102,11 +102,20 @@
     transition: filter 0.2s;
 
     &:disabled {
-      cursor: not-allowed; 
+      cursor: default;
+      opacity: 0.5;
     }
 
     &:hover:not(:disabled) {
       filter: brightness(0.7);
+    }
+
+    &.isActive {
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+    }
+
+    &.isActive:hover {
+      filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &.playButton {
@@ -114,13 +123,10 @@
       height: 4rem;
       border-radius: 1rem;
       background: var(--purple-400);
-      
 
       &:hover:not(:disabled) {
         filter: brightness(0.95);
       }
     }
-
-    
   }
 }
